# FleurEngine

./: .clang-format  .cmake-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CREDITS.md  Configuration.cmake  GenerateVisualStudioProject.ps1  GenerateXcodeProject.sh  README.md
CoreLib/: Bitmap.hpp  CMakeLists.txt  CoreLib.cpp  CoreLibConcepts.h  DefaultAllocator.cpp  DefaultAllocator.h  SharedPtr.h  Sptr.h  UniquePtr.h  Uptr.h  singleton.hpp  tests.cpp
Engine/: CMakeLists.txt  Fleur.h  Fuego.h  Glad.cmake  ImGui.cmake  ProtoFilesMisc.cmake  WindowsDep.cmake  abseil.cmake  assimp.cmake  chpch.h  flpch.h  fupch.h  protobuf.cmake  tbb.cmake
Engine/Editor/: Scene.cpp  Scene.h
Engine/Fleur/: Application.cpp  Application.h  AssetsManager.cpp  AssetsManager.h  Core.h  EntryPoint.h  EventQueue.h  FlTime.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  ThreadPool.cpp  ThreadPool.h  Window.h
Engine/Fleur/Events/: ApplicationEvent.h  Event.h  EventVisitor.h  KeyEvent.h  MouseEvent.h
Engine/Fleur/FileSystem/: FileSystem.cpp  FileSystem.h
Engine/Fleur/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Engine/Fleur/MacOS/: CMakeLists.txt  EntryPointMacOS.mm  EventQueueMacOS.h  EventQueueMacOS.mm  InputMacOS.cpp  InputMacOS.h  KeyCodesMacOS.h  WindowMacOS.h  WindowMacOS.mm
Engine/Fleur/MacOS/Metal/: BufferMetal.h  BufferMetal.mm  CommandBufferMetal.h  CommandBufferMetal.mm  CommandPoolMetal.h  CommandPoolMetal.mm  CommandQueueMetal.h  CommandQueueMetal.mm  DeviceMetal.h  DeviceMetal.mm  MetalContext.h  MetalContext.mm  ShaderMetal.h  ShaderMetal.mm  SurfaceMetal.h  SurfaceMetal.mm  SwapchainMetal.h  SwapchainMetal.mm  TextureMetal.h  TextureMetal.mm
Engine/Fleur/Renderer/: Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  CommandBuffer.h  CommandPool.h  CommandQueue.h  DescriptorBuffer.h  Device.h  Framebuffer.h  Graphics.hpp  Image2D.cpp  Image2D.h  Material.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Sampler.h  Shader.h  ShaderObject.h  Skybox.h  Surface.h  Swapchain.h  Texture.h  Toolchain.h  VertexLayout.cpp  VertexLayout.h
Engine/Fleur/Services/: ServiceInterfaces.hpp  ServiceLocator.cpp  ServiceLocator.h
Engine/Fleur/Windows/: CMakeLists.txt  EntryPointWindows.cpp  EventQueueWin.cpp  EventQueueWin.h  FileSystemPathsWin.h  InputWin.cpp  InputWin.h  KeyCodesWin.h  TimeWin.cpp  TimeWin.h  WindowWin.cpp  WindowWin.h
Engine/Fleur/Windows/OpenGL/: BufferOpenGL.cpp  BufferOpenGL.h  CommandBufferOpenGL.cpp  CommandBufferOpenGL.h  CommandPoolOpenGl.cpp  CommandPoolOpenGl.h  CommandQueueOpenGL.cpp  CommandQueueOpenGL.h  DeviceOpenGL.cpp  DeviceOpenGL.h  FramebufferOpenGL.cpp  FramebufferOpenGL.h  MaterialOpenGL.cpp  ShaderObjectOpenGL.cpp  ShaderObjectOpenGL.h  ShaderOpenGL.cpp  ShaderOpenGL.h  SurfaceOpenGL.cpp  SurfaceOpenGL.h  SwapchainOpenGL.cpp  SwapchainOpenGL.h  TextureOpenGL.cpp  TextureOpenGL.h
Engine/Fuego/: Application.cpp  Application.h  ApplicationPipeline.hpp  AssetsManager.cpp  AssetsManager.h  Core.h  EntryPoint.h  EventQueue.h  FuTime.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Scene.cpp  Scene.h  ThreadPool.cpp  ThreadPool.h  Window.h
Engine/Fuego/Events/: ApplicationEvent.h  Event.h  EventVisitor.h  KeyEvent.h  MouseEvent.h
Engine/Fuego/FileSystem/: FileSystem.cpp  FileSystem.h
Engine/Fuego/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Engine/Fuego/MacOS/: BufferMetal.cpp  BufferMetal.h  CMakeLists.txt  EntryPointMacOS.mm  EventQueueMacOS.h  EventQueueMacOS.mm  FileSystemPathsMacOS.h  GameViewController.mm  InputMacOS.cpp  InputMacOS.h  KeyCodesMacOS.h  Renderer.h  Renderer.mm  ShaderTypes.h  WindowMacOS.h  WindowMacOS.mm
Engine/Fuego/MacOS/Metal/: BufferMetal.h  BufferMetal.mm  CommandBufferMetal.h  CommandBufferMetal.mm  CommandPoolMetal.h  CommandPoolMetal.mm  CommandQueueMetal.h  CommandQueueMetal.mm  DeviceMetal.h  DeviceMetal.mm  MetalContext.h  MetalContext.mm  ShaderMetal.h  ShaderMetal.mm  SurfaceMetal.h  SurfaceMetal.mm  SwapchainMetal.h  SwapchainMetal.mm  TextureMetal.h  TextureMetal.mm  Triangle.metal
Engine/Fuego/ProtoIn/: SceneObjects.proto
Engine/Fuego/Renderer/: Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  CommandBuffer.h  CommandPool.h  CommandQueue.h  Cubemap.cpp  Cubemap.h  CubemapTexture.cpp  CubemapTexture.h  DescriptorBuffer.h  Device.h  Framebuffer.h  Graphics.hpp  GraphicsContext.h  Image2D.cpp  Image2D.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderMarker.h  Renderer.cpp  Renderer.h  Sampler.h  Shader.h  ShaderObject.h  Skybox.h  Surface.h  Swapchain.h  Texture.h  TextureUtills.h  Toolchain.h  VertexLayout.cpp  VertexLayout.h
Engine/Fuego/Services/: ServiceInterfaces.hpp  ServiceLocator.cpp  ServiceLocator.h
Engine/Fuego/Windows/: CMakeLists.txt  EntryPointWindows.cpp  EventQueueWin.cpp  EventQueueWin.h  FileSystemPathsWin.h  InputWin.cpp  InputWin.h  KeyCodesWin.h  TimeWin.cpp  TimeWin.h  WinEventQueue.cpp  WinEventQueue.h  WinWindow.cpp  WinWindow.h  WindowWin.cpp  WindowWin.h
Engine/Fuego/Windows/OpenGL/: BufferOpenGL.cpp  BufferOpenGL.h  CommandBufferOpenGL.cpp  CommandBufferOpenGL.h  CommandPoolOpenGl.cpp  CommandPoolOpenGl.h  CommandQueueOpenGL.cpp  CommandQueueOpenGL.h  CubemapOpenGL.cpp  CubemapOpenGL.h  CubemapTextureOpenGL.cpp  CubemapTextureOpenGL.h  DeviceOpenGL.cpp  DeviceOpenGL.h  Framebuffer.h  FramebufferOpenGL.cpp  FramebufferOpenGL.h  MaterialOpenGL.cpp  MaterialOpenGL.h  OpenGLContext.cpp  OpenGLContext.h  ShaderObjectOpenGL.cpp  ShaderObjectOpenGL.h  ShaderOpenGL.cpp  ShaderOpenGL.h  SurfaceOpenGL.cpp  SurfaceOpenGL.h  SurfaceWindows.cpp  SurfaceWindows.h  SwapchainOpenGL.cpp  (+5 more)
Sandbox/: CMakeLists.txt  SandboxApp.cpp  SandboxApp.h
Sandbox/MacOS/: main.mm
Sandbox/Resources/MacOS/: Sandbox-Info.plist.in  Triangle.metal
Sandbox/Resources/Models/: gizmo.glb
Sandbox/Windows/: main.cpp
Tests/: CMakeLists.txt
Tests/include/: CoreLibTests.h  ProtoFilesTests.hpp  Tests.cpp  Tests.h
Tests/src/: Tests.cpp
(+28 files in other folders)
