CMAKE_MINIMUM_REQUIRED(VERSION 3.24)

# === Configuration and Utilities ===
INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/Configuration.cmake)

# === Project Definition ===
PROJECT(
  FuegoSandboxProject
  VERSION 0.1
  DESCRIPTION "Fuego Engine Sandbox Project"
  LANGUAGES CXX
)

# === C++ Standard Configuration ===
SET(CMAKE_CXX_STANDARD ${FU_CPP_LANG_VER})
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

# === Build Configuration ===
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Parallel build configuration
IF(NOT DEFINED CMAKE_BUILD_PARALLEL_LEVEL)
  # Default to number of processors if not specified
  INCLUDE(ProcessorCount)
  PROCESSORCOUNT(N)
  IF(NOT N EQUAL 0)
    SET(CMAKE_BUILD_PARALLEL_LEVEL ${N})
  ELSE()
    # Fallback to 8 if processor count fails
    SET(CMAKE_BUILD_PARALLEL_LEVEL 8)
  ENDIF()
ENDIF()

MESSAGE(STATUS "Build parallel level: ${CMAKE_BUILD_PARALLEL_LEVEL}")

# === MSVC Runtime Configuration ===
IF(MSVC)
  IF(FU_CONF_DEBUG)
    SET(CMAKE_MSVC_RUNTIME_LIBRARY ${FU_MSVC_RUNTIME_DEBUG})
  ELSEIF(FU_CONF_RELEASE)
    SET(CMAKE_MSVC_RUNTIME_LIBRARY ${FU_MSVC_RUNTIME_RELEASE})
  ENDIF()
ENDIF()

# === Output Directories ===
SET(OUTPUT_DIR ${CMAKE_BINARY_DIR}/output)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR})

# === IDE Configuration ===
IF(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
  SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
ENDIF()

# === Global Variables ===
SET(ORGANIZATION "FUEGO")

# === Platform Definitions ===
IF(FUEGO_PLATFORM STREQUAL "macos")
  ADD_COMPILE_DEFINITIONS(FUEGO_PLATFORM_MACOS)
ELSEIF(FUEGO_PLATFORM STREQUAL "win")
  ADD_COMPILE_DEFINITIONS(FUEGO_PLATFORM_WIN)
ENDIF()

# === Testing Configuration ===
ENABLE_TESTING()

# === Subdirectories ===
ADD_SUBDIRECTORY(CoreLib)
ADD_SUBDIRECTORY(Engine)
ADD_SUBDIRECTORY(Sandbox)

IF(ENABLE_FUEGO_TEST)
  ADD_SUBDIRECTORY(Tests)
ENDIF()
